Added shared_ptr implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ message("=== My implementation of std::algorithms ===")
 add_library(algorithms INTERFACE)
 add_library(my::std::algorithms ALIAS algorithms)
 
+add_library(memory INTERFACE)
+add_library(my::std::memory ALIAS memory)
+
 target_include_directories(algorithms INTERFACE inc)
 
 add_subdirectory(tst)
