--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_executable(ut_algorithms test_set_difference.cpp)
+add_executable(ut_mystd
+    test_set_difference.cpp
+    test_shared_ptr.cpp
+)
 
-target_link_libraries(ut_algorithms my::std::algorithms)
-target_include_directories(ut_algorithms PRIVATE inc)
+target_link_libraries(ut_mystd
+    my::std::algorithms
+    my::std::memory
+)
+target_include_directories(ut_mystd PRIVATE inc)
